compiler/actonc/test/syntaxerrors/err5.act
def f(x:
    y = x * 2
    return x + y
